# agentic_ai_for_hackathon

./: .gitignore  README.md
agent-first-meeting/: .dockerignore  .env.example  Dockerfile  README.html  README.md  index-policy.json  pyproject.toml  vector-policy.json
agent-first-meeting/data/: proposal_manufacturing_2024.pptx
agent-first-meeting/docs/: api.md  azure_setup.md  flow.md  templates.md
agent-first-meeting/scripts/: build_default_template.py  check_foundry.py  check_pptx_blob.py  check_vector_search.py  ingest_documents.py  run_agent.py  run_server.py  seed_cases.py  seed_customer.py  seed_db.py  test_api.py
agent-first-meeting/src/agent_first_meeting/: __init__.py  _azure_clients.py  _company_id.py  _meeting_select.py  agent.py  api.py  config.py  logging_config.py  role_classifier.py  schemas.py
agent-first-meeting/src/agent_first_meeting/tools/: __init__.py  _blob_sas.py  _html_to_text.py  _pptx_builder.py  _url_safety.py  _web_fetch_helpers.py  case_search.py  customer_history.py  document_gen.py  meeting_record.py  web_fetch.py
agent-first-meeting/templates/: default.pptx
agent-first-meeting/tests/: test_html_to_text.py  test_meeting_id.py  test_meeting_select.py  test_pptx_builder.py  test_role_classifier.py  test_schemas.py  test_url_safety.py  test_web_fetch.py
docs/: git_flow_guide.md  pyproject_toml_guide.md
frontend/: .dockerignore  Dockerfile  main.py  pyproject.toml
knowledge_materials/: README.md  index-policy.json  pyproject.toml  vector-policy.json
knowledge_materials/data/: catalog_cloud_services_2024.pptx  proposal_it_security_2024.pptx
knowledge_materials/docs/: .env_設定変更.md  case_search_変更点.md
knowledge_materials/src/: case_search.py  check_count.py  ingest_documents.py  search_knowledge.py
submission/: DEMO.md  architecture.md  zenn-article-draft.md
test-dir/: pyproject.toml
